src/snapshots/doctest_lib_rs__derive-container-param-analyzer.snap
---
source: src/lib.rs
expression: "Keyword::to_mapping()"
---
type: text
fields:
  keyword:
    ignore_above: 256
    type: keyword
analyzer: whitespace
