src/snapshots/doctest_lib_rs__derive-container-param-keyword.snap
---
source: src/lib.rs
expression: "Keyword::to_mapping()"
---
type: text
fields:
  completion:
    type: completion
  keyword:
    type: keyword
