src/snapshots/doctest_lib_rs__derive-field-skip.snap
---
source: src/lib.rs
expression: "MyIndex::to_mapping()"
---
properties:
  id:
    type: integer
  author:
    type: text
    fields:
      keyword:
        ignore_above: 256
        type: keyword
