src/snapshots/doctest_lib_rs__derive-generic.snap
---
source: src/lib.rs
expression: "Wrapper::<InnerVariant>::to_mapping()"
---
properties:
  id:
    type: integer
  inner:
    type: text
    fields:
      keyword:
        ignore_above: 256
        type: keyword
